Problemas Lactancia, Succión, Frecuencia
Problemas Lactancia parte 2
Succión y Posiiones Correctas
Menu Frecuencia de Lactar
*pruebas de redimensionamiento de menús

--- a/PROLACTANCIA/app/src/main/res/layout/beneficios.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/beneficios.xml
@@ -8,6 +8,16 @@
     android:background="@drawable/fondo_nuevo"
     tools:context="app.packages.prolactancia.Beneficios">
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:background="@android:drawable/editbox_background_normal"
+        android:backgroundTint="@android:color/background_light"
+        android:layout_below="@id/bt_atras"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageButton
         android:id="@+id/bt_atras"
         android:layout_width="75dp"
@@ -24,12 +34,12 @@
         android:layout_height="75dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_toRightOf="@id/bt_atras"
         android:layout_toLeftOf="@id/bt_home"
+        android:layout_toRightOf="@id/bt_atras"
         android:padding="5dp"
         android:paddingTop="15dp"
         android:textAlignment="center"
-        android:textSize="30sp" />
+        android:textSize="24sp" />
 
     <ImageButton
         android:id="@+id/bt_home"
@@ -46,6 +56,7 @@
         android:layout_width="75dp"
         android:layout_height="100dp"
         android:layout_above="@id/contenido"
+        android:layout_below="@id/divider"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="10dp"
         app:srcCompat="@drawable/beneficios_1" />
@@ -55,6 +66,8 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_above="@id/contenido"
+        android:layout_below="@id/divider"
+        android:paddingTop="5sp"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         android:layout_toEndOf="@+id/img_representativa"
@@ -65,13 +78,16 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/contenido"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/vista_contenido"
         android:layout_centerHorizontal="true"
-        android:background="@color/cardview_light_background"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@android:color/transparent"
         android:textAlignment="center"
         android:textDirection="inherit"
+        app:tabBackground="@drawable/formato_boton_sup"
         app:tabIndicatorColor="#E91E63"
         app:tabIndicatorGravity="bottom"
         app:tabMaxWidth="400dp"
@@ -85,23 +101,29 @@
             android:id="@+id/tab_madre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/formato_boton"
             android:text="Mamá" />
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_hijo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/formato_boton"
             android:text="Bebé" />
 
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/vista_contenido"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="350dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp">
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/formato_boton_inf"
+        android:backgroundTint="@android:color/transparent">
 
     </androidx.viewpager.widget.ViewPager>
 
