--- a/PROLACTANCIA/app/src/main/res/layout/fragment_forma_sp.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_forma_sp.xml
@@ -4,14 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_moniliasis"
+    android:id="@+id/layout_forma_sp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardview_light_background"
-    tools:context="app.packages.prolactancia.Controladores.mejorar_produccion">
+    tools:context=".Controladores.forma_sp">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -25,10 +26,9 @@
         android:backgroundTint="@color/cardview_shadow_start_color"
         android:foreground="@color/cardview_shadow_start_color"
         android:padding="3dp"
-        android:text="Dolor y grietas en los pezones por moniliasis:"
+        android:text="Primero. Colocar la cara de su hija o hijo frente a su pecho y la nariz frente al pezón."
         android:textColor="@color/design_default_color_on_secondary"
         android:textSize="14sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -43,8 +43,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:padding="3dp"
-        android:text="A veces, en cualquier momento después del nacimiento, la madre puede
-sentir dolor, picazón y presentar grietas o enrojecimiento en la areola y en el pezón."
+        android:text="Segundo. Colocar la barriga de su hija o hijo en contacto con la suya."
         android:textColor="@color/design_default_color_on_secondary"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,8 +61,7 @@ sentir dolor, picazón y presentar grietas o enrojecimiento en la areola y en el
         android:background="@color/cardview_shadow_start_color"
         android:backgroundTint="@color/cardview_shadow_start_color"
         android:foreground="@color/cardview_shadow_start_color"
-        android:text="Si el niño o niña se siente incómodo y si tiene puntos blancos en la
-lengua y en las encías, se trata de moniliasis, mal de boca, sarro o algodoncillo."
+        android:text="Tercero. Apoyar la espalda de su hija o hijo sobre su antebrazo y colocar la cabeza en el pliegue del codo."
         android:textColor="@color/design_default_color_on_secondary"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +76,7 @@ lengua y en las encías, se trata de moniliasis, mal de boca, sarro o algodoncil
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:padding="3dp"
-        android:text="La madre debe ir al centro de salud y llevar al niño o niña para que ambos reciban tratamiento médico."
+        android:text="Cuarto. Levantar su seno con su mano en forma de C y estimule con el pezón la boca de su hija o hijo."
         android:textColor="@color/design_default_color_on_secondary"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,14 +85,30 @@ lengua y en las encías, se trata de moniliasis, mal de boca, sarro o algodoncil
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <ImageView
-        android:id="@+id/img_moniliasis"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/dolor_grietas_2"
+        android:id="@+id/img_forma_1"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginStart="10dp"
+        android:baselineAlignBottom="true"
+        android:src="@drawable/succion_pos_2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView4"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageView
+        android:id="@+id/img_forma_2"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginEnd="10dp"
+        android:baselineAlignBottom="true"
+        android:src="@drawable/succion_pos_3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@id/img_forma_1"
+        app:layout_constraintTop_toBottomOf="@id/textView4"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
