--- a/PROLACTANCIA/app/src/main/res/layout/activity_main.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/fondo_nuevo"
-    tools:context="app.packages.prolactancia.MainActivity">
+    tools:context=".MainActivity">
 
     <ProgressBar
         android:id="@+id/progressBar"
