--- a/PROLACTANCIA/app/src/main/res/layout/fragment_abceso.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_abceso.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -83,3 +88,4 @@ pecho con los 2 senos si no tiene dolor o molestias."
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
