--- a/PROLACTANCIA/app/src/main/res/layout/fragment_aliviar_dg.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_aliviar_dg.xml
@@ -1,3 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -136,3 +142,4 @@ la luz del sol por lo menos 2 veces al día."
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
