--- a/PROLACTANCIA/app/src/main/res/layout/fragment_aliviar_pc.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_aliviar_pc.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,7 +11,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardview_light_background"
-    tools:context="app.packages.prolactancia.Controladores.aliviar_pc">
+    tools:context=".Controladores.aliviar_pc">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -80,3 +85,4 @@ Debe asegurarse que el niño o niña esté en buena posición (agarrando bien el
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
