--- a/PROLACTANCIA/app/src/main/res/layout/fragment_ductos_obs.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_ductos_obs.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -78,7 +84,5 @@ tomando bien el pecho y puede darse un masaje suave presionando el área dura y 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
