--- a/PROLACTANCIA/app/src/main/res/layout/fragment_hijo.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_hijo.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,7 +16,7 @@
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
@@ -20,7 +26,7 @@
         android:padding="3dp"
         android:text="Previene enfermedades comunes en la infancia como: diarreas, asma, neumonía, alergias, entre otras."
         android:textColor="@color/design_default_color_on_secondary"
-        android:textSize="14sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -156,8 +162,10 @@
         android:backgroundTint="@android:color/transparent"
         android:scaleType="fitCenter"
         android:src="@drawable/bt_ver_video"
+        app:layout_constraintTop_toBottomOf="@id/textView9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
