--- a/PROLACTANCIA/app/src/main/res/layout/fragment_informate_dg.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_informate_dg.xml
@@ -1,3 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -117,3 +123,4 @@ otras medicinas. Estas no la aliviarán y pueden empeorar el dolor."
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
