--- a/PROLACTANCIA/app/src/main/res/layout/fragment_informate_pc.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_informate_pc.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,7 +12,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardview_light_background"
-    tools:context=".Controladores.informate">
+    tools:context=".Controladores.informate_pc">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -62,3 +68,4 @@ bien o no está mamando con frecuencia, los pechos también se pueden congestion
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
