--- a/PROLACTANCIA/app/src/main/res/layout/fragment_madre.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_madre.xml
@@ -1,149 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_madre"
+    android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cardview_light_background"
-    tools:context="app.packages.prolactancia.Controladores.madre">
+    android:fillViewport="true">
 
-    <!-- TODO: Update blank fragment layout -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_madre"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/formato_boton_inf"
+        android:foregroundTint="@android:color/transparent"
+        tools:context="app.packages.prolactancia.Controladores.madre">
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:background="@color/cardview_shadow_start_color"
-        android:backgroundTint="@color/cardview_shadow_start_color"
-        android:foreground="@color/cardview_shadow_start_color"
-        android:padding="3dp"
-        android:text="Previene cáncer de mama, de ovarios y riesgo de osteoporosis después de la menopausia."
-        android:textColor="@color/design_default_color_on_secondary"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <!-- TODO: Update blank fragment layout -->
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:padding="3dp"
-        android:text="Ayuda a regular el peso. "
-        android:textColor="@color/design_default_color_on_secondary"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView1" />
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:background="@color/cardview_shadow_start_color"
+            android:backgroundTint="@color/cardview_shadow_start_color"
+            android:foreground="@color/cardview_shadow_start_color"
+            android:padding="3dp"
+            android:text="Previene cáncer de mama, de ovarios y riesgo de osteoporosis después de la menopausia."
+            android:textColor="@color/design_default_color_on_secondary"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:background="@color/cardview_shadow_start_color"
-        android:backgroundTint="@color/cardview_shadow_start_color"
-        android:foreground="@color/cardview_shadow_start_color"
-        android:padding="3dp"
-        android:text="La lactancia facilita e incrementa el amor de la madre a su hijo o hija. "
-        android:textColor="@color/design_default_color_on_secondary"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:padding="3dp"
+            android:text="Ayuda a regular el peso. "
+            android:textColor="@color/design_default_color_on_secondary"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:padding="3dp"
-        android:text="Ahorro. "
-        android:textColor="@color/design_default_color_on_secondary"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:background="@color/cardview_shadow_start_color"
+            android:backgroundTint="@color/cardview_shadow_start_color"
+            android:foreground="@color/cardview_shadow_start_color"
+            android:padding="3dp"
+            android:text="La lactancia facilita e incrementa el amor de la madre a su hijo o hija. "
+            android:textColor="@color/design_default_color_on_secondary"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:background="@color/cardview_shadow_start_color"
-        android:backgroundTint="@color/cardview_shadow_start_color"
-        android:foreground="@color/cardview_shadow_start_color"
-        android:padding="3dp"
-        android:text="Estimula la producción de leche. "
-        android:textColor="@color/design_default_color_on_secondary"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:padding="3dp"
+            android:text="Ahorro. "
+            android:textColor="@color/design_default_color_on_secondary"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:padding="3dp"
-        android:text="Previene la depresión post-parto. "
-        android:textColor="@color/design_default_color_on_secondary"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:background="@color/cardview_shadow_start_color"
+            android:backgroundTint="@color/cardview_shadow_start_color"
+            android:foreground="@color/cardview_shadow_start_color"
+            android:padding="3dp"
+            android:text="Estimula la producción de leche. "
+            android:textColor="@color/design_default_color_on_secondary"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:background="@color/cardview_shadow_start_color"
-        android:backgroundTint="@color/cardview_shadow_start_color"
-        android:foreground="@color/cardview_shadow_start_color"
-        android:padding="3dp"
-        android:text="Ayudan a sentirse relajada y cariñosa hacia su bebé. "
-        android:textColor="@color/design_default_color_on_secondary"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:padding="3dp"
+            android:text="Previene la depresión post-parto. "
+            android:textColor="@color/design_default_color_on_secondary"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:padding="3dp"
-        android:text="Ayuda a la rápida recuperación después del parto. "
-        android:textColor="@color/design_default_color_on_secondary"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:background="@color/cardview_shadow_start_color"
+            android:backgroundTint="@color/cardview_shadow_start_color"
+            android:foreground="@color/cardview_shadow_start_color"
+            android:padding="3dp"
+            android:text="Ayudan a sentirse relajada y cariñosa hacia su bebé. "
+            android:textColor="@color/design_default_color_on_secondary"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
-    <ImageButton
-        android:id="@+id/bt_ver_video"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:backgroundTint="@android:color/transparent"
-        android:scaleType="fitCenter"
-        android:src="@drawable/bt_ver_video"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:padding="3dp"
+            android:text="Ayuda a la rápida recuperación después del parto. "
+            android:textColor="@color/design_default_color_on_secondary"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+        <ImageButton
+            android:id="@+id/bt_ver_video"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:backgroundTint="@android:color/transparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/bt_ver_video"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView8" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
