--- a/PROLACTANCIA/app/src/main/res/layout/fragment_madre_enf.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_madre_enf.xml
@@ -1,3 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -130,3 +137,4 @@ harán daño al niño o niña. Pero, se debe preguntar al médico si los medicam
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
