--- a/PROLACTANCIA/app/src/main/res/layout/fragment_mejorar_produccion.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_mejorar_produccion.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -95,3 +101,4 @@ o después del almuerzo. No la tome con leche o infusiones."
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
