--- a/PROLACTANCIA/app/src/main/res/layout/fragment_protege_lactancia.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_protege_lactancia.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/layout_alimentacion"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_protege_lact_fg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/cardview_light_background"
-        tools:context="app.packages.prolactancia.Controladores.mejorar_produccion">
+        tools:context="app.packages.prolactancia.Controladores.solo_pecho">
 
         <!-- TODO: Update blank fragment layout -->
 
@@ -26,8 +26,9 @@
             android:backgroundTint="@color/cardview_shadow_start_color"
             android:foreground="@color/cardview_shadow_start_color"
             android:padding="3dp"
-            android:text="Para mejorar el contenido de grasa de la leche materna, consumir una o
-dos veces por semana pescado, trocitos de aguacate o de chonta."
+            android:text="Las madres en todo el mundo se ven acosadas y confundidas por campañas
+de publicidad de leches artificiales y biberones a través de la televisión, afiches, radio y por
+otras personas, que les dicen lo bueno que es alimentar al niño con biberón."
             android:textColor="@color/design_default_color_on_secondary"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -44,8 +45,9 @@ dos veces por semana pescado, trocitos de aguacate o de chonta."
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:padding="3dp"
-            android:text="Además de las comidas principales (desayuno, almuerzo y merienda),
-agregar un refrigerio nutritivo en la mañana y otro en la tarde."
+            android:text="Estas campañas, presentan niños sonrientes, madres felices y prometen
+salud, bienestar y belleza. A muchas madres les regalan a través del personal médico y hospitales
+muestras gratis de leches artificiales."
             android:textColor="@color/design_default_color_on_secondary"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -63,8 +65,9 @@ agregar un refrigerio nutritivo en la mañana y otro en la tarde."
             android:background="@color/cardview_shadow_start_color"
             android:backgroundTint="@color/cardview_shadow_start_color"
             android:foreground="@color/cardview_shadow_start_color"
-            android:text="Durante los primeros tres meses después del parto, usted debe recibir
-vitaminas y minerales adicionales a los que ingiere con su alimentación."
+            android:text="Las madres, las familias, las consejeras y los servicios de salud deben
+saber que la leche materna es insustituible y que el uso de otras leches puede tener consecuencias
+severas para la salud de los niños o niñas."
             android:textColor="@color/design_default_color_on_secondary"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,32 +75,16 @@ vitaminas y minerales adicionales a los que ingiere con su alimentación."
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:padding="3dp"
-            android:text="Solicitar en el centro de salud más cercano las tabletas de hierro y
-otras vitaminas. Tomar una tableta al día con agua o jugo de frutas cítricas, dos horas antes
-o después del almuerzo. No la tome con leche o infusiones."
-            android:textColor="@color/design_default_color_on_secondary"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <ImageView
-            android:id="@+id/img_mejorar_1"
+            android:id="@+id/img_fg_protege_1"
             android:layout_width="wrap_content"
-            android:layout_height="120dp"
-            android:src="@drawable/alimentacion_2"
+            android:layout_height="150dp"
+            android:src="@drawable/protege_lact_2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
