--- a/PROLACTANCIA/app/src/main/res/layout/fragment_forma_sp.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_forma_sp.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_forma_sp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/cardview_light_background"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_forma_fg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/formato_boton_inf"
+        android:foregroundTint="@android:color/transparent"
     tools:context=".Controladores.forma_sp">
 
     <!-- TODO: Update blank fragment layout -->
@@ -86,17 +87,16 @@
 
     <ImageView
         android:id="@+id/img_forma_1"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:layout_marginStart="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
         android:baselineAlignBottom="true"
-        android:src="@drawable/succion_pos_2"
+        android:src="@drawable/succion_pos_9"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView4"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@id/textView4" />
 
-    <ImageView
+    <!--ImageView
         android:id="@+id/img_forma_2"
         android:layout_width="160dp"
         android:layout_height="160dp"
@@ -108,7 +108,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@id/img_forma_1"
         app:layout_constraintTop_toBottomOf="@id/textView4"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0" /-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
