--- a/PROLACTANCIA/app/src/main/res/layout/fragment_solo_pecho.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_solo_pecho.xml
@@ -8,10 +8,11 @@
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_solo_pecho_fg"
+        android:id="@+id/layout_pecho_fg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/cardview_light_background"
+        android:background="@drawable/formato_boton_inf"
+        android:foregroundTint="@android:color/transparent"
         tools:context="app.packages.prolactancia.Controladores.solo_pecho">
 
         <!-- TODO: Update blank fragment layout -->
