--- a/PROLACTANCIA/app/src/main/res/layout/abceso.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/abceso.xml
@@ -76,8 +76,9 @@
     <fragment
         android:id="@+id/contenido"
         android:name="app.packages.prolactancia.Controladores.abceso"
-        android:layout_width="350dp"
-        android:layout_height="400dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="600dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginRight="10dp"
