--- a/PROLACTANCIA/app/src/main/res/layout/beneficios.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/beneficios.xml
@@ -53,8 +53,8 @@
 
     <ImageView
         android:id="@+id/img_representativa"
-        android:layout_width="75dp"
-        android:layout_height="100dp"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
         android:layout_above="@id/contenido"
         android:layout_below="@id/divider"
         android:layout_alignParentLeft="true"
@@ -63,8 +63,8 @@
 
     <TextView
         android:id="@+id/txt_mensaje"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@id/contenido"
         android:layout_below="@id/divider"
         android:paddingTop="5sp"
@@ -79,15 +79,15 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/contenido"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_above="@id/vista_contenido"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@android:color/transparent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/formato_boton_sup"
         android:textAlignment="center"
         android:textDirection="inherit"
-        app:tabBackground="@drawable/formato_boton_sup"
+        app:tabBackground="@android:color/transparent"
         app:tabIndicatorColor="#E91E63"
         app:tabIndicatorGravity="bottom"
         app:tabMaxWidth="400dp"
@@ -119,8 +119,8 @@
         android:layout_height="350dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/formato_boton_inf"
         android:backgroundTint="@android:color/transparent">
