--- a/PROLACTANCIA/app/src/main/res/layout/fragment_abceso.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_abceso.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_abceso_f"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/cardview_light_background"
-    tools:context="app.packages.prolactancia.Controladores.mejorar_produccion">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_absceso_fg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/formato_boton_inf"
+        android:foregroundTint="@android:color/transparent"
+    tools:context="app.packages.prolactancia.Controladores.abceso">
 
     <!-- TODO: Update blank fragment layout -->
 
