--- a/PROLACTANCIA/app/src/main/res/layout/fragment_banco.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_banco.xml
@@ -11,8 +11,9 @@
         android:id="@+id/layout_banco_fg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/cardview_light_background"
-        tools:context="app.packages.prolactancia.Controladores.solo_pecho">
+        android:background="@drawable/formato_boton_inf"
+        android:foregroundTint="@android:color/transparent"
+        tools:context="app.packages.prolactancia.Controladores.banco">
 
         <!-- TODO: Update blank fragment layout -->
 
