--- a/PROLACTANCIA/app/src/main/res/layout/fragment_cesarea_sp.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_cesarea_sp.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_cesarea_sp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/cardview_light_background"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_cesarea_fg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/formato_boton_inf"
+        android:foregroundTint="@android:color/transparent"
     tools:context=".Controladores.cesarea_sp">
 
     <!-- TODO: Update blank fragment layout -->
@@ -37,15 +39,16 @@
 
     <ImageView
         android:id="@+id/img_cesarea_1"
-        android:layout_width="110dp"
+        android:layout_width="wrap_content"
         android:layout_height="110dp"
-        android:layout_marginStart="50dp"
         android:baselineAlignBottom="true"
-        android:src="@drawable/succion_pos_4"
+        android:src="@drawable/succion_pos_10"
+        app:layout_constraintBottom_toTopOf="@id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView1" />
 
-    <ImageView
+    <!--ImageView
         android:id="@+id/img_cesarea_2"
         android:layout_width="110dp"
         android:layout_height="110dp"
@@ -53,7 +56,7 @@
         android:baselineAlignBottom="true"
         android:src="@drawable/succion_pos_5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView1" />
+        app:layout_constraintTop_toBottomOf="@id/textView1" /-->
 
     <TextView
         android:id="@+id/textView3"
@@ -75,15 +78,16 @@
 
     <ImageView
         android:id="@+id/img_cesarea_3"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
         android:baselineAlignBottom="true"
-        android:src="@drawable/succion_pos_6"
+        android:src="@drawable/succion_pos_11"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView3"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/textView3" />
 
-    <ImageView
+    <!--ImageView
         android:id="@+id/img_cesarea_4"
         android:layout_width="120dp"
         android:layout_height="120dp"
@@ -103,7 +107,7 @@
         android:src="@drawable/succion_pos_8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView3"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"/-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
