--- a/PROLACTANCIA/app/src/main/res/layout/fragment_cuando.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_cuando.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_cuando"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/cardview_light_background"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_cuando_fg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/formato_boton_inf"
+        android:foregroundTint="@android:color/transparent"
     tools:context="app.packages.prolactancia.Controladores.cuando">
 
     <!-- TODO: Update blank fragment layout -->
@@ -117,6 +118,7 @@
         android:backgroundTint="@android:color/transparent"
         android:scaleType="fitCenter"
         android:src="@drawable/bt_ver_video"
+        app:layout_constraintTop_toBottomOf="@id/textView6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
