--- a/PROLACTANCIA/app/src/main/res/layout/higiene.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/higiene.xml
@@ -53,18 +53,18 @@
 
     <ImageView
         android:id="@+id/img_representativa"
-        android:layout_width="75dp"
-        android:layout_height="100dp"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
         android:layout_above="@id/contenido"
         android:layout_below="@id/divider"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="10dp"
-        app:srcCompat="@drawable/beneficios_1" />
+        app:srcCompat="@drawable/higiene_1" />
 
     <TextView
         android:id="@+id/txt_mensaje"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@id/contenido"
         android:layout_below="@id/divider"
         android:paddingTop="5sp"
@@ -78,13 +78,16 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/contenido"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:layout_above="@id/vista_contenido"
         android:layout_centerHorizontal="true"
-        android:background="@color/cardview_light_background"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/formato_boton_sup"
         android:textAlignment="center"
         android:textDirection="inherit"
+        app:tabBackground="@android:color/transparent"
         app:tabIndicatorColor="#E91E63"
         app:tabIndicatorGravity="bottom"
         app:tabMaxWidth="400dp"
@@ -98,23 +101,27 @@
             android:id="@+id/tab_cuando"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="¿Cuándo lavarse                  las manos?" />
+            android:text="¿Cuándo lavarse las manos?" />
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_como"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="¿Cómo lavarse                    las manos?" />
+            android:text="¿Cómo lavarse las manos?" />
 
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/vista_contenido"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="350dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp">
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/formato_boton_inf"
+        android:backgroundTint="@android:color/transparent">
 
     </androidx.viewpager.widget.ViewPager>
 
