Redimensionamiento de menus parte 1
Adaptaciones a pantallas
Menu Principal
Menu Lactancia
Menu Problemas de Lactancia

--- a/PROLACTANCIA/app/src/main/res/layout/abceso.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/abceso.xml
@@ -77,13 +77,12 @@
         android:id="@+id/contenido"
         android:name="app.packages.prolactancia.Controladores.abceso"
 
-        android:layout_width="wrap_content"
-        android:layout_height="600dp"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp" />
 
 
 
