--- a/PROLACTANCIA/app/src/main/res/layout/fragment_abceso.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_abceso.xml
@@ -11,7 +11,7 @@
         android:id="@+id/layout_absceso_fg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/formato_boton_inf"
+        android:background="@drawable/formato_boton"
         android:foregroundTint="@android:color/transparent"
     tools:context="app.packages.prolactancia.Controladores.abceso">
 
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginTop="20dp"
         android:background="@color/cardview_shadow_start_color"
         android:backgroundTint="@color/cardview_shadow_start_color"
         android:foreground="@color/cardview_shadow_start_color"
@@ -41,7 +42,7 @@ para sacar el pus y deberá continuar con el tratamiento."
 
     <ImageView
         android:id="@+id/img_abceso_info"
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
         android:src="@drawable/abceso_2"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,6 +77,7 @@ amamantar del pecho con absceso 2 días después."
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginBottom="20dp"
         android:padding="3dp"
         android:text="Después de 2 días de tomar antibióticos, la madre puede continuar dando
 pecho con los 2 senos si no tiene dolor o molestias."
@@ -85,8 +87,6 @@ pecho con los 2 senos si no tiene dolor o molestias."
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
