--- a/PROLACTANCIA/app/src/main/res/layout/fragment_aumentar_produccion.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_aumentar_produccion.xml
@@ -11,7 +11,7 @@
         android:id="@+id/layout_aumentar_fg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/formato_boton_inf"
+        android:background="@drawable/formato_boton"
         android:foregroundTint="@android:color/transparent"
         tools:context="app.packages.prolactancia.Controladores.mastitis">
 
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            android:layout_marginTop="20dp"
             android:background="@color/cardview_shadow_start_color"
             android:backgroundTint="@color/cardview_shadow_start_color"
             android:foreground="@color/cardview_shadow_start_color"
@@ -192,6 +193,7 @@ ni chupones, ni chupetes porque pueden producirle diarrea, se le confunde la len
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            android:layout_marginBottom="20dp"
             android:background="@color/cardview_shadow_start_color"
             android:backgroundTint="@color/cardview_shadow_start_color"
             android:foreground="@color/cardview_shadow_start_color"
