--- a/PROLACTANCIA/app/src/main/res/layout/fragment_ductos_obs.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_ductos_obs.xml
@@ -11,7 +11,7 @@
         android:id="@+id/layout_ductos_fg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/formato_boton_inf"
+        android:background="@drawable/formato_boton"
         android:foregroundTint="@android:color/transparent"
     tools:context="app.packages.prolactancia.Controladores.ductos_obs">
 
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginTop="20dp"
         android:background="@color/cardview_shadow_start_color"
         android:backgroundTint="@color/cardview_shadow_start_color"
         android:foreground="@color/cardview_shadow_start_color"
@@ -75,6 +76,7 @@ tomando bien el pecho y puede darse un masaje suave presionando el área dura y 
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginBottom="20dp"
         android:padding="3dp"
         android:text="Si la obstrucción no desaparece con la lactancia y con los masajes,
 ésta puede convertirse en una infección del pecho o mastitis. Se recomienda que la madre se extraiga la leche manualmente."
