--- a/PROLACTANCIA/app/src/main/res/layout/fragment_duerme_suelta.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_duerme_suelta.xml
@@ -11,7 +11,7 @@
         android:id="@+id/layout_duerme_fg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/formato_boton_inf"
+        android:background="@drawable/formato_boton"
         android:foregroundTint="@android:color/transparent"
         tools:context="app.packages.prolactancia.Controladores.duerme_suelta">
 
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            android:layout_marginTop="20dp"
             android:background="@color/cardview_shadow_start_color"
             android:backgroundTint="@color/cardview_shadow_start_color"
             android:foreground="@color/cardview_shadow_start_color"
@@ -149,6 +150,7 @@ quede a la altura de su hombro, o recuéstelo sobre sus piernas."
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            android:layout_marginBottom="20dp"
             android:padding="3dp"
             android:text="Es normal que la niña o niño bote gases con un poco de leche (regurgite)."
             android:textColor="@color/design_default_color_on_secondary"
