--- a/PROLACTANCIA/app/src/main/res/layout/fragment_madre_enf.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_madre_enf.xml
@@ -11,7 +11,7 @@
         android:id="@+id/layout_madre_fg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/formato_boton_inf"
+        android:background="@drawable/formato_boton"
         android:foregroundTint="@android:color/transparent"
     tools:context="app.packages.prolactancia.Controladores.madre_enf">
 
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginTop="20dp"
         android:background="@color/cardview_shadow_start_color"
         android:backgroundTint="@color/cardview_shadow_start_color"
         android:foreground="@color/cardview_shadow_start_color"
@@ -126,6 +127,7 @@ SIDA se debe consultar con el personal de salud."
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+       android:layout_marginBottom="20dp"
         android:padding="3dp"
         android:text="En la mayoría de los casos los medicamentos que toma la madre no le
 harán daño al niño o niña. Pero, se debe preguntar al médico si los medicamentos pueden afectar la lactancia o al niño o niña."
