--- a/PROLACTANCIA/app/src/main/res/layout/fragment_mastitis.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_mastitis.xml
@@ -11,7 +11,7 @@
         android:id="@+id/layout_mastitis_fg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/formato_boton_inf"
+        android:background="@drawable/formato_boton"
         android:foregroundTint="@android:color/transparent"
     tools:context="app.packages.prolactancia.Controladores.mastitis">
 
@@ -19,10 +19,11 @@
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginTop="20dp"
         android:background="@color/cardview_shadow_start_color"
         android:backgroundTint="@color/cardview_shadow_start_color"
         android:foreground="@color/cardview_shadow_start_color"
@@ -40,7 +41,7 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
@@ -55,7 +56,7 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
@@ -73,7 +74,7 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
@@ -88,7 +89,7 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
@@ -106,7 +107,7 @@
 
     <ImageView
         android:id="@+id/img_mastitis_info"
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
         android:src="@drawable/mastitis_2"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -117,7 +118,7 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
@@ -136,10 +137,11 @@
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginBottom="20dp"
         android:padding="3dp"
         android:text="Si la madre con mastitis comienza a tener escalofríos y si la fiebre
 continúa por más de 2 días a pesar de estar en tratamiento médico, la madre debe ir al centro
