--- a/PROLACTANCIA/app/src/main/res/layout/fragment_protege_lactancia.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/fragment_protege_lactancia.xml
@@ -11,7 +11,7 @@
         android:id="@+id/layout_protege_fg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/formato_boton_inf"
+        android:background="@drawable/formato_boton"
         android:foregroundTint="@android:color/transparent"
         tools:context="app.packages.prolactancia.Controladores.protege_lactancia">
 
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            android:layout_marginTop="20dp"
             android:background="@color/cardview_shadow_start_color"
             android:backgroundTint="@color/cardview_shadow_start_color"
             android:foreground="@color/cardview_shadow_start_color"
@@ -79,9 +80,10 @@ severas para la salud de los niños o niñas."
 
         <ImageView
             android:id="@+id/img_fg_protege_1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="150dp"
             android:src="@drawable/protege_lact_2"
+            android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
