--- a/PROLACTANCIA/app/src/main/res/layout/menu_lactancia.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/menu_lactancia.xml
@@ -77,6 +77,7 @@
         android:id="@+id/bt_alimentacion"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:layout_marginBottom="20dp"
         android:layout_above="@id/bt_succion"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
@@ -89,6 +90,7 @@
         android:id="@+id/bt_problemas_lact"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:layout_marginBottom="20dp"
         android:layout_above="@id/bt_frecuencia_lact"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
