--- a/PROLACTANCIA/app/src/main/res/layout/menu_principal.xml
+++ b/PROLACTANCIA/app/src/main/res/layout/menu_principal.xml
@@ -81,8 +81,10 @@
 
     <ImageView
         android:id="@+id/img_titulo"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="70dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -91,7 +93,7 @@
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
-        android:layout_height="7dp"
+        android:layout_height="10dp"
         android:background="@android:drawable/editbox_background_normal"
         android:backgroundTint="@android:color/background_light"
         app:layout_constraintTop_toBottomOf="@id/img_titulo"
